fix not rendering on desktop if hidden on mobile

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -65,7 +65,7 @@
 }
 
 .items-body {
-  @apply flex min-h-0 flex-1 overflow-x-clip overflow-y-auto;
+  @apply min-h-0 flex-1 overflow-x-clip overflow-y-auto;
   overscroll-behavior-y: contain;
   padding: 0.5rem 0.5rem calc(0.5rem + env(safe-area-inset-bottom));
 }
